--- a/Pagina1.html
+++ b/Pagina1.html
@@ -44,6 +44,7 @@
         <aside>
             <br><br><br>
             <h3>ASIDE 1</h3>
+            <a width="300" height="200" class="twitter-timeline" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             <br><br>
         </aside>
         <BR></BR>
