--- a/Pagina1.html
+++ b/Pagina1.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <h1>Bienvenidos al Ovi de HTML y Css</h1>
+        <h1>Principios Básicos de HTML y CSS</h1>
     </header>
     <nav>
         <ul class="menu">
@@ -34,6 +34,17 @@
                     <a href="#">Video 2</a>
                 </div>          
             </li>
+
+            <li class="desplegableactividad">
+                <a class="btnDesplegableactividad" href="#">ACTIVIDADES</a>
+                <div class="contenidoDesplegableactividad">
+                    <a href="#">Actividad 1</a>
+                    <a href="#">Actividad 2</a>
+                    <a href="#">Actividad 3</a>
+                </div>
+            </li>
+            
+
 
 
             <li><a href="#">AUTORES</a></li>
@@ -60,7 +71,7 @@
         </section>
         <aside>
             <br>
-            <h3>ASIDE 1</h3>
+            <h3>ASIDE</h3>
             <a width="300" height="200" class="twitter-timeline"
                 href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by UniversidadUNAD</a>
             <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
@@ -69,7 +80,7 @@
         <BR></BR>
 
     </section>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br>
     <footer class="piepagina">
         <p>Universidad Nacional Abierta y a Distancia UNAD <br>
             Escuela de Ciencias Basicas Tecnologia e Ingenieria <br>
