--- a/Pagina1.html
+++ b/Pagina1.html
@@ -27,17 +27,17 @@
                 </div>
             </li>
 
-            <li class="desplegablevideo">
-                <a class="btnDesplegablevideo" href="#">VIDEOS</a>
-                <div class="contenidoDesplegablevideo">
+            <li class="desplegable">
+                <a class="btnDesplegable" href="#">VIDEOS</a>
+                <div class="contenidoDesplegable">
                     <a href="#">Video 1</a>
                     <a href="#">Video 2</a>
                 </div>          
             </li>
 
-            <li class="desplegableactividad">
-                <a class="btnDesplegableactividad" href="#">ACTIVIDADES</a>
-                <div class="contenidoDesplegableactividad">
+            <li class="desplegable">
+                <a class="btnDesplegable" href="#">ACTIVIDADES</a>
+                <div class="contenidoDesplegable">
                     <a href="#">Actividad 1</a>
                     <a href="#">Actividad 2</a>
                     <a href="#">Actividad 3</a>
