--- a/Pagina1.html
+++ b/Pagina1.html
@@ -15,6 +15,7 @@
         <h1>Principios Básicos de HTML y CSS</h1>
     </header>
     <nav>
+            
         <ul class="menu">
             <li><a href="#">INICIO</a></li>
 
@@ -32,7 +33,7 @@
                 <div class="contenidoDesplegable">
                     <a href="#">Video 1</a>
                     <a href="#">Video 2</a>
-                </div>          
+                </div>
             </li>
 
             <li class="desplegable">
@@ -43,10 +44,6 @@
                     <a href="#">Actividad 3</a>
                 </div>
             </li>
-            
-
-
-
             <li><a href="#">AUTORES</a></li>
         </ul>
     </nav>
@@ -56,6 +53,10 @@
     <section class="contenedor">
         <h2> CONTENEDOR </h2>
         <section class="principal">
+            <BR></BR>
+            <BR></BR>
+            <BR></BR>
+            <BR></BR>
             <h2>OBJETIVOS DEL OVI</h2>
             <article class="articuloppal">
                 OBJETIVO GENERAL <br>
@@ -78,6 +79,13 @@
             <br>
         </aside>
         <p></p>
+        <section class="contador">
+            <br><br>
+                <a href="http://www.websmultimedia.com/contador-de-visitas-gratis">
+                    <img style="border: 0px solid; display: inline;" alt="contador de visitas"
+                        src="http://www.websmultimedia.com/contador-de-visitas.php?id=273149">VISITAS</a><br><a
+                    href='http://www.websmultimedia.com/contador-de-visitas-gratis'></a><br>
+        </section>
 
     </section>
     <br><br><br><br><br><br><br><br><br><br><br>
