actualización integracion de parciales header y footer

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
+@@include('partials/_header.html')
 
-<partial src="_header.html" title="header"></partial>
   <section>
     <article>
       <h1>Introducción</h1>
@@ -13,4 +13,4 @@
     </article>
   </section>
 
-<partial src="_footer.html" title="header"></partial>
+  @@include('partials/_footer.html')
