--- a/src/lecturas/lec_1_intro_html.html
+++ b/src/lecturas/lec_1_intro_html.html
@@ -1,4 +1,4 @@
-<partial src="_header.html" title="encabezado"></partial>
+@@include('../partials/_header.html')
 <section>
   <article>
     <h1>Introducción a html </h1>
@@ -62,4 +62,4 @@
 
   </article>
 </section>
-<partial src="_footer.html" title="pie de pagina"></partial>
+@@include('../partials/_footer.html')
