--- a/src/multimedia/imagenes.html
+++ b/src/multimedia/imagenes.html
@@ -1,4 +1,3 @@
-  
-<partial src="_header.html" title="header"></partial>
+@@include('../partials/_header.html')
 imagenes
-<partial src="_footer.html" title="header"></partial>
+@@include('../partials/_footer.html')
