--- a/src/actividades/act_1.html
+++ b/src/actividades/act_1.html
@@ -1,3 +1,3 @@
-<partial src="_header.html" title="encabezado"></partial>
-Actividad uno 
-<partial src="_footer.html" title="pie de pagina"></partial>
+@@include('../partials/_header.html', { "webRoot": ".." })
+Actividad 1
+@@include('../partials/_footer.html', { "webRoot": ".." })
