--- a/src/actividades/act_2.html
+++ b/src/actividades/act_2.html
@@ -1,3 +1,3 @@
-<partial src="_header.html" title="encabezado"></partial>
-Actividad dos
-<partial src="_footer.html" title="pie de pagina"></partial>
+@@include('../partials/_header.html', { "webRoot": ".." })
+Actividad 2
+@@include('../partials/_footer.html', { "webRoot": ".." })
