--- a/src/actividades/act_3.html
+++ b/src/actividades/act_3.html
@@ -1,3 +1,3 @@
-<partial src="_header.html" title="encabezado"></partial>
-actividad tres
-<partial src="_footer.html" title="pie de pagina"></partial>
+@@include('../partials/_header.html', { "webRoot": ".." })
+Actividad 3
+@@include('../partials/_footer.html', { "webRoot": ".." })
