--- a/src/autores.html
+++ b/src/autores.html
@@ -1,3 +1,3 @@
-<partial src="_header.html" title="encabezado"></partial>
+@@include('partials/_header.html')
 autores
-<partial src="_footer.html" title="pie de pagina"></partial>
+@@include('partials/_footer.html')
