--- a/src/lecturas/lec_2.html
+++ b/src/lecturas/lec_2.html
@@ -1,4 +1,3 @@
-<partial src="_header.html" title="encabezado"></partial>
-Lectura dos
-      
-<partial src="_footer.html" title="pie de pagina"></partial>
+@@include('../partials/_header.html')
+Lectura 2
+@@include('../partials/_footer.html')
