--- a/src/lecturas/lec_4.html
+++ b/src/lecturas/lec_4.html
@@ -1,3 +1,3 @@
-<partial src="_header.html" title="encabezado"></partial>
+@@include('../partials/_header.html')
 Lectura 4
-<partial src="_footer.html" title="pie de pagina"></partial>
+@@include('../partials/_footer.html')
