--- a/actividades/act_2.html
+++ b/actividades/act_2.html
@@ -16,7 +16,7 @@
     </div>
     <ul class="row menu">
 
-      <li> <a href=../index.html>Inicio</a> </li>
+      <li> <a href="../index.html">Inicio</a> </li>
       <li>Lecturas
         <ul class="sub-menu">
           <li><a href="../lecturas/lec_1_intro_html.html"> Introducción html </a> </li>
