--- a/autores.html
+++ b/autores.html
@@ -12,34 +12,34 @@
   
   <nav class="container row vertical-align">
     <div class="logo">
-      <a href=./index.html><img src=./assets/images/Logo_unad.png alt=""> </a>
+      <a href="./index.html"><img src="./assets/images/Logo_unad.png" alt=""> </a>
     </div>
     <ul class="row menu">
 
-      <li> <a href=./index.html>Inicio</a> </li>
+      <li> <a href="./index.html">Inicio</a> </li>
       <li>Lecturas
         <ul class="sub-menu">
-          <li><a href=./lecturas/lec_1_intro_html.html"> Introducción html </a> </li>
-          <li><a href=./lecturas/lec_2.html>Lectura 2</a> </li>
-          <li><a href=./lecturas/lec_3.html>Lectura 3</a></li>
-          <li><a href=./lecturas/lec_4.html>Lectura 4</a></li>
-          <li><a href=./lecturas/lec_5.html>Lectura 5</a></li>
+          <li><a href="./lecturas/lec_1_intro_html.html"> Introducción html </a> </li>
+          <li><a href="./lecturas/lec_2.html">Lectura 2</a> </li>
+          <li><a href="./lecturas/lec_3.html">Lectura 3</a></li>
+          <li><a href="./lecturas/lec_4.html">Lectura 4</a></li>
+          <li><a href="./lecturas/lec_5.html">Lectura 5</a></li>
         </ul>
       </li>
       <li>Multimedia
       <ul class="sub-menu">
-        <li> <a href=./multimedia/videos.html>Videos</a> </li>
-        <li> <a href=./multimedia/imagenes.html>Imagenes</a> </li>
+        <li> <a href="./multimedia/videos.html">Videos</a> </li>
+        <li> <a href="./multimedia/imagenes.html">Imagenes</a> </li>
       </ul>
       </li>
       <li> Actividades
       <ul class="sub-menu">
-        <li><a href=./actividades/act_1.html>Actividad 1</a></li>
-        <li><a href=./actividades/act_2.html>Actividad 2</a></li>
-        <li><a href=./actividades/act_3.html>Actividad 3</a></li>
+        <li><a href="./actividades/act_1.html">Actividad 1</a></li>
+        <li><a href="./actividades/act_2.html">Actividad 2</a></li>
+        <li><a href="./actividades/act_3.html">Actividad 3</a></li>
       </ul>
     </li>
-      <li> <a href=./autores.html>Autores</a></li>
+      <li> <a href="./autores.html">Autores</a></li>
     </ul>
 
   </nav>
@@ -55,7 +55,7 @@ autores
                 <p>Grupo-78</p>
             </div>
     <div class="footer-img">
-        <img src="../assets/images/logo-white.png" alt="">
+        <img src="./assets/images/logo-white.png" alt="">
     </div>
 </div>
    
