--- a/lecturas/lec_3.html
+++ b/lecturas/lec_3.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,59 +8,123 @@
   <title>D_S_W</title>
   <link rel="stylesheet" type="text/css" href="../assets/styles/main.css">
 </head>
+
 <body>
-<header>
-  
-  <nav class="container row vertical-align">
-    <div class="logo">
-      <a href="../index.html"><img src="../assets/images/Logo_unad.png" alt=""> </a>
+  <header>
+
+    <nav class="container row vertical-align">
+      <div class="logo">
+        <a href="../index.html"><img src="../assets/images/Logo_unad.png" alt=""> </a>
+      </div>
+      <ul class="row menu">
+
+        <li> <a href="../index.html">Inicio</a> </li>
+        <li>Lecturas
+          <ul class="sub-menu">
+            <li><a href="../lecturas/lec_1_intro_html.html"> Introducción html </a> </li>
+            <li><a href="../lecturas/lec_2.html">Navegación interna y externa</a> </li>
+            <li><a href="../lecturas/lec_3.html">Contenido de Html</a></li>
+            <li><a href="../lecturas/lec_4.html">CSS3</a></li>
+            <li><a href="../lecturas/lec_5.html">Propiedade de CSS3</a></li>
+          </ul>
+        </li>
+        <li>Multimedia
+          <ul class="sub-menu">
+            <li> <a href="../multimedia/videos.html">Videos</a> </li>
+            <li> <a href="../multimedia/imagenes.html">Imagenes</a> </li>
+          </ul>
+        </li>
+        <li> Actividades
+          <ul class="sub-menu">
+            <li><a href="../actividades/act_1.html">Actividad 1</a></li>
+            <li><a href="../actividades/act_2.html">Actividad 2</a></li>
+            <li><a href="../actividades/act_3.html">Actividad 3</a></li>
+          </ul>
+        </li>
+        <li> <a href="../autores.html">Autores</a></li>
+      </ul>
+
+    </nav>
+
+  </header>
+  <section class="section-content container">
+    <div class="description">
+
+      <h1> Contenido en HTML <br>
+        ( SECTION,ASIDE, FOOTER, ARTICLE)
+      </h1>
+      <p>Para que una pagina web vaya tomado forma es importante reconocer las siguientes etiquetas
+        las cuales nos iran dando forma, ademas de dividir nuestro contenido y mantenerlo ordenado </p>
+
+      <ul>
+        <li>
+          <b> ARTICLE: </b> Esta etiqueta identifica zonas únicas de contenido independiente que van a ir en la página
+          web
+
+        </li> <br>
+        <li>
+          <b> SECTION:</b> Tiene como objetivo identificar partes del contenido de la página en otra palabra divide un
+          artículo en capítulos. Esta etiqueta va dentro de la etiqueta ARTICLE
+        </li><br>
+        <li>
+          <b>ASIDE:</b>En esta etiqueta puede ir todo tipo de contenido. Pero generalmente se suele utilizar para
+          exponer enlaces.
+        </li> <br>
+        <li>
+          <b>FOOTER:</b>
+          Contiene información del pie de página como enlaces de interés botones a redes sociales entre otros. Ejemplo
+          de estas etiquetas:
+        </li><br>
+      </ul>
+      <b>Referencias Bibligraficas de HTML</b>
+      <p>
+        DevCode. 15 dic. 2015. Estructura básica de un documento HTML. Recuperado de: <br>
+        <a
+          href="https://www.youtube.com/watch?v=DdSRl2OZauE&list=PLQCgNGUqLK4njrWWAXv30jx6CGzgI-SC3&index=6">https://www.youtube.com/watch?v=DdSRl2OZauE&list=PLQCgNGUqLK4njrWWAXv30jx6CGzgI-SC3&index=6</a>
+        <br>
+        oshduck.todas las etiquetas.Recuperdado de: <br>
+        <a href=" https://allthetags.com/?fbclid=IwAR0D_8SM7L8PTki3NDjfjGidtl7T_OwU1QiZbiFLxXt83nXYtr9VpIOGgHA">
+          https://allthetags.com/?fbclid=IwAR0D_8SM7L8PTki3NDjfjGidtl7T_OwU1QiZbiFLxXt83nXYtr9VpIOGgHA</a>
+        
+        <br>
+      </p>
+
     </div>
-    <ul class="row menu">
+    <aside>
+      <div class="aside-twiter">
+        <br>
+        <p> Bienvenido a mi pagina eres el visitante numero:<br>
+          <a href="https://www.contadorvisitasgratis.com" title="contador de visitas gratis"><img
+              src="https://counter10.wheredoyoucomefrom.ovh/private/contadorvisitasgratis.php?c=6zc5rjtbf4jnm6grnu3q8x6mmlcz157l"
+              border="0" title="contador de visitas gratis" alt="contador de visitas gratis"></a>
+        </p>
 
-      <li> <a href="../index.html">Inicio</a> </li>
-      <li>Lecturas
-        <ul class="sub-menu">
-          <li><a href="../lecturas/lec_1_intro_html.html"> Introducción html </a> </li>
-          <li><a href="../lecturas/lec_2.html">Lectura 2</a> </li>
-          <li><a href="../lecturas/lec_3.html">Lectura 3</a></li>
-          <li><a href="../lecturas/lec_4.html">Lectura 4</a></li>
-          <li><a href="../lecturas/lec_5.html">Lectura 5</a></li>
-        </ul>
-      </li>
-      <li>Multimedia
-      <ul class="sub-menu">
-        <li> <a href="../multimedia/videos.html">Videos</a> </li>
-        <li> <a href="../multimedia/imagenes.html">Imagenes</a> </li>
-      </ul>
-      </li>
-      <li> Actividades
-      <ul class="sub-menu">
-        <li><a href="../actividades/act_1.html">Actividad 1</a></li>
-        <li><a href="../actividades/act_2.html">Actividad 2</a></li>
-        <li><a href="../actividades/act_3.html">Actividad 3</a></li>
-      </ul>
-    </li>
-      <li> <a href="../autores.html">Autores</a></li>
-    </ul>
 
-  </nav>
 
-</header>
+      </div>
+      <div class="aside-texto">
 
-Lectura 3
-<footer>
+        <a class="twitter-timeline" data-lang="es" data-width="300" data-height="400" data-theme="light"
+          data-link-color="#2B7BB9" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by
+          UniversidadUNAD</a>
+        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+      </div>
+    </aside>
+  </section>
+  <footer>
     <div class="container content-footer">
-        <div class="footer-text">
-                <p>Universidad Nacional Abierta y a Distancia </p>
-                <p>Escuela de Ciencias Básicas Tecnología e Ingenieria</p>
-                <p>Grupo-78</p>
-            </div>
-    <div class="footer-img">
+      <div class="footer-text">
+        <p>Universidad Nacional Abierta y a Distancia </p>
+        <p>Escuela de Ciencias Básicas Tecnología e Ingenieria</p>
+        <p>Grupo-78</p>
+      </div>
+      <div class="footer-img">
         <img src="../assets/images/logo-white.png" alt="">
+      </div>
     </div>
-</div>
-   
-</footer>
+
+  </footer>
 </body>
 
 </html>
