--- a/lecturas/lec_1_intro_html.html
+++ b/lecturas/lec_1_intro_html.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,121 +8,132 @@
   <title>D_S_W</title>
   <link rel="stylesheet" type="text/css" href="../assets/styles/main.css">
 </head>
+
 <body>
-<header>
-  
-  <nav class="container row vertical-align">
-    <div class="logo">
-      <a href="../index.html"><img src="../assets/images/Logo_unad.png" alt=""> </a>
-    </div>
-    <ul class="row menu">
+  <header>
 
-      <li> <a href="../index.html">Inicio</a> </li>
-      <li>Lecturas
-        <ul class="sub-menu">
-          <li><a href="../lecturas/lec_1_intro_html.html"> Introducción html </a> </li>
-          <li><a href="../lecturas/lec_2.html">Lectura 2</a> </li>
-          <li><a href="../lecturas/lec_3.html">Lectura 3</a></li>
-          <li><a href="../lecturas/lec_4.html">Lectura 4</a></li>
-          <li><a href="../lecturas/lec_5.html">Lectura 5</a></li>
-        </ul>
-      </li>
-      <li>Multimedia
-      <ul class="sub-menu">
-        <li> <a href="../multimedia/videos.html">Videos</a> </li>
-        <li> <a href="../multimedia/imagenes.html">Imagenes</a> </li>
+    <nav class="container row vertical-align">
+      <div class="logo">
+        <a href="../index.html"><img src="../assets/images/Logo_unad.png" alt=""> </a>
+      </div>
+      <ul class="row menu">
+
+        <li> <a href="../index.html">Inicio</a> </li>
+        <li>Lecturas
+          <ul class="sub-menu">
+            <li><a href="../lecturas/lec_1_intro_html.html"> Introducción html </a> </li>
+            <li><a href="../lecturas/lec_2.html">Navegación interna y externa</a> </li>
+            <li><a href="../lecturas/lec_3.html">Contenido de Html</a></li>
+            <li><a href="../lecturas/lec_4.html">CSS3</a></li>
+            <li><a href="../lecturas/lec_5.html">Propiedade de CSS3</a></li>
+          </ul>
+        </li>
+        <li>Multimedia
+          <ul class="sub-menu">
+            <li> <a href="../multimedia/videos.html">Videos</a> </li>
+            <li> <a href="../multimedia/imagenes.html">Imagenes</a> </li>
+          </ul>
+        </li>
+        <li> Actividades
+          <ul class="sub-menu">
+            <li><a href="../actividades/act_1.html">Actividad 1</a></li>
+            <li><a href="../actividades/act_2.html">Actividad 2</a></li>
+            <li><a href="../actividades/act_3.html">Actividad 3</a></li>
+          </ul>
+        </li>
+        <li> <a href="../autores.html">Autores</a></li>
       </ul>
-      </li>
-      <li> Actividades
-      <ul class="sub-menu">
-        <li><a href="../actividades/act_1.html">Actividad 1</a></li>
-        <li><a href="../actividades/act_2.html">Actividad 2</a></li>
-        <li><a href="../actividades/act_3.html">Actividad 3</a></li>
-      </ul>
-    </li>
-      <li> <a href="../autores.html">Autores</a></li>
-    </ul>
 
-  </nav>
+    </nav>
 
-</header>
+  </header>
 
-<section>
-  <article>
-    <h1>Introducción a html </h1>
-    <div>
-
-      Sus iniciales HTML por sus siglas en ingles HyperText Markup Language que significa Lenguaje de Marcado de
-      Hipertexto, fue definido por la W3C (world wide web).
-      Este es un lenguaje que es utilizado para la estructuración de páginas web, HTML no es un lenguaje de programación
-      ya que no tiene funciones aritméticas, variables o estructuras propias de los lenguajes de programación como PHP.
-      Los navegadores no muestran las etiquetas HTML , pero si las usa para representar el contenido de una pagina
-    </div>
-
-    <h2>Etiquetas de html</h2>
-    <div>
+  <section class="section-content container">
+    <div class="description">
+      <h1> Introducción a html </h1>
+      <p> Sus iniciales HTML por sus siglas en ingles HyperText Markup Language que significa Lenguaje de Marcado de
+        Hipertexto, fue definido por la W3C (world wide web).
+        Este es un lenguaje que es utilizado para la estructuración de páginas web, HTML no es un lenguaje de
+        programación
+        ya que no tiene funciones aritméticas, variables o estructuras propias de los lenguajes de programación como
+        PHP.
+        Los navegadores no muestran las etiquetas HTML , pero si las usa para representar el contenido de una pagina
+      </p>
+      <h2>Etiquetas de html</h2>
       <ul>
         <li>
-          El elemento <b>
+          <b>
             < !doctype html>
           </b> Define que el documento esta bajo el estandar de HTML 5.
         </li>
 
-        <li> elemento <b>
+        <li> <b>
             < html>
           </b> representa la raiz de un documento HTML. El resto de elementos descienden de este elemento.
         </li>
 
 
-        <li> etiqueta <b>
+        <li> <b>
             < head>
-          </b> Representa una colección de metadatos acerca del documento, incluyendo enlaces a, o definiciones de,
+          </b> Representa una colección de metadatos acerca del documento, incluyendo enlaces a, o definiciones
+          de,
           scripts y hojas de estilo.
         </li>
 
-        <li> etiquetas <b>
+        <li> <b>
             < body>
-          </b> Representa el contenido principal de un documento HTML. Solo hay un elemento < body> en un documento.
-        </li>
-
-        <li> etiqueta <b>
-            < title>
-          </b> Define el título del documento, el cual se muestra en la barra de título del navegador o en las pestañas
-          de página. Solamente puede contener texto y cualquier otra etiqueta contenida no será interpretada.
-        </li>
-        <li>
-          La etiqueta <b>
-            < link>
-          </b> Usada para enlazar JavaScript y CSS externos con el documento HTML actual.
-        </li>
-        <li>
-          La etiqueta <b>
-            < meta>
-          </b> Define los metadatos que no pueden ser definidos usando otro elemento HTML.
-        </li>
-        <li>
-          La etiqueta <b>
-            style
-          </b> Etiqueta de estilo usada para escribir CSS en línea.
+          </b> Representa el contenido principal de un documento HTML. Solo hay un elemento < body> en un
+            documento.
         </li>
       </ul>
+      <b>Referencias Bibligraficas de HTML</b>
+      <p>
+          
+          oshduck.todas las etiquetas.Recuperdado de: <br>
+          <a href=" https://allthetags.com/?fbclid=IwAR0D_8SM7L8PTki3NDjfjGidtl7T_OwU1QiZbiFLxXt83nXYtr9VpIOGgHA">
+            https://allthetags.com/?fbclid=IwAR0D_8SM7L8PTki3NDjfjGidtl7T_OwU1QiZbiFLxXt83nXYtr9VpIOGgHA</a>
+          <br>
+          w3c.introduccion HTML. Recuperado de <br>
+          <a href="https://www.w3schools.com/html/html_intro.asp">https://www.w3schools.com/html/html_intro.asp</a>
+          <br>
+          
+  
+          <br>
+        </p>
     </div>
 
-  </article>
-</section>
-<footer>
+    <aside>
+      <div class="aside-twiter">
+        <br>
+        <p> Bienvenido a mi pagina eres el visitante numero:<br>
+          <a href="https://www.contadorvisitasgratis.com" title="contador de visitas gratis"><img
+              src="https://counter10.wheredoyoucomefrom.ovh/private/contadorvisitasgratis.php?c=6zc5rjtbf4jnm6grnu3q8x6mmlcz157l"
+              border="0" title="contador de visitas gratis" alt="contador de visitas gratis"></a>
+        </p>
+      </div>
+      <div class="aside-texto">
+
+        <a class="twitter-timeline" data-lang="es" data-width="300" data-height="300" data-theme="light"
+          data-link-color="#2B7BB9" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by
+          UniversidadUNAD</a>
+        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+      </div>
+    </aside>
+  </section>
+  <footer>
     <div class="container content-footer">
-        <div class="footer-text">
-                <p>Universidad Nacional Abierta y a Distancia </p>
-                <p>Escuela de Ciencias Básicas Tecnología e Ingenieria</p>
-                <p>Grupo-78</p>
-            </div>
-    <div class="footer-img">
+      <div class="footer-text">
+        <p>Universidad Nacional Abierta y a Distancia </p>
+        <p>Escuela de Ciencias Básicas Tecnología e Ingenieria</p>
+        <p>Grupo-78</p>
+      </div>
+      <div class="footer-img">
         <img src="../assets/images/logo-white.png" alt="">
+      </div>
     </div>
-</div>
-   
-</footer>
+
+  </footer>
 </body>
 
 </html>
