--- a/lecturas/lec_2.html
+++ b/lecturas/lec_2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,59 +8,140 @@
   <title>D_S_W</title>
   <link rel="stylesheet" type="text/css" href="../assets/styles/main.css">
 </head>
+
 <body>
-<header>
-  
-  <nav class="container row vertical-align">
-    <div class="logo">
-      <a href="../index.html"><img src="../assets/images/Logo_unad.png" alt=""> </a>
+  <header>
+
+    <nav class="container row vertical-align">
+      <div class="logo">
+        <a href="../index.html"><img src="../assets/images/Logo_unad.png" alt=""> </a>
+      </div>
+      <ul class="row menu">
+
+        <li> <a href="../index.html">Inicio</a> </li>
+        <li>Lecturas
+          <ul class="sub-menu">
+            <li><a href="../lecturas/lec_1_intro_html.html"> Introducción html </a> </li>
+            <li><a href="../lecturas/lec_2.html">Navegación interna y externa</a> </li>
+            <li><a href="../lecturas/lec_3.html">Contenido de Html</a></li>
+            <li><a href="../lecturas/lec_4.html">CSS3</a></li>
+            <li><a href="../lecturas/lec_5.html">Propiedade de CSS3</a></li>
+          </ul>
+        </li>
+        <li>Multimedia
+          <ul class="sub-menu">
+            <li> <a href="../multimedia/videos.html">Videos</a> </li>
+            <li> <a href="../multimedia/imagenes.html">Imagenes</a> </li>
+          </ul>
+        </li>
+        <li> Actividades
+          <ul class="sub-menu">
+            <li><a href="../actividades/act_1.html">Actividad 1</a></li>
+            <li><a href="../actividades/act_2.html">Actividad 2</a></li>
+            <li><a href="../actividades/act_3.html">Actividad 3</a></li>
+          </ul>
+        </li>
+        <li> <a href="../autores.html">Autores</a></li>
+      </ul>
+
+    </nav>
+
+  </header>
+
+  <section class="section-content container">    
+      <div class="description">
+        <h1> Navegación externa e interna <br> (NAV -UL - OL - LI)</h1>
+          <p> Para estos enlaces de navegación se usa la etiqueta <b>
+          < a>
+            < /a> </b> con un atributo <b> href= "..."
+        </b> en el cual especifica la dirección de destino.
+          </p>
+        <ul class="styles-li">
+          <li>
+          <b>Navegación interna:</b> Son aquellos enlaces de navegación que llevan a otra sección de la misma página
+          y pueden
+          definirse con anclas definidas con el atributo id o name.
+
+          </li> <br>
+         <li>
+            <b>Navegación Externa:</b> Son los enlaces que dirigen hacia otras páginas que se encuentran fuera del
+          sitio web
+          actual. <br> Por ejemplo:
+            <b>
+            <center>
+              < a href=" https://www.google.com/"> Pagina Google< /a> </b> </center> </li> <br>
+          <li>
+          La etiqueta <b>
+            < nav>/nav>
+          </b>
+          se define como el bloque principal de enlaces que necesita una página web para su
+          navegación
+          </li> <br>
+          <li>
+          <b> Lista Desordenada </b><br>
+          UL: esta la primera etiqueta con la que se debe abrir una lista ycrear la lista desordenada <br>
+          LI: esta etiqueta marca a las listas con viñetas, círculos negros,cuadrados deforma
+          predeterminada
+          </li> <br>
+
+          <li>
+          <b> Lista Ordenada</b>
+          OL: Con esta etiqueta se debe abrir una lista y crear una lista ordenada
+          LI: Al ser ordenada se listarán con números en forma consecutiva
+
+          </li>
+
+      </ul> <br><br>
+      <b>Referencias Bibligraficas de HTML</b>
+      <p>
+          
+        <br>
+        w3c.listasdesordenadas.Recuperado de: <br>
+        <a href="https://www.w3schools.com/html/tryit.asp?filename=tryhtml_lists_unordered">
+          https://www.w3schools.com/html/tryit.asp?filename=tryhtml_lists_unordered</a>
+        <br>
+        w3c.listasordenadas.Recuperado de:
+        <a href="https://www.w3schools.com/html/tryit.asp?filename=tryhtml_lists_ordered">https://www.w3schools.com/html/tryit.asp?filename=tryhtml_lists_ordered</a>
+         <br>
+
+        <br>
+      </p>
     </div>
-    <ul class="row menu">
+    <aside>
+      <div class="aside-twiter">
+        <br>
+        <p> Bienvenido a mi pagina eres el visitante numero:<br>
+          <a href="https://www.contadorvisitasgratis.com" title="contador de visitas gratis"><img
+              src="https://counter10.wheredoyoucomefrom.ovh/private/contadorvisitasgratis.php?c=6zc5rjtbf4jnm6grnu3q8x6mmlcz157l"
+              border="0" title="contador de visitas gratis" alt="contador de visitas gratis"></a>
+        </p>
 
-      <li> <a href="../index.html">Inicio</a> </li>
-      <li>Lecturas
-        <ul class="sub-menu">
-          <li><a href="../lecturas/lec_1_intro_html.html"> Introducción html </a> </li>
-          <li><a href="../lecturas/lec_2.html">Lectura 2</a> </li>
-          <li><a href="../lecturas/lec_3.html">Lectura 3</a></li>
-          <li><a href="../lecturas/lec_4.html">Lectura 4</a></li>
-          <li><a href="../lecturas/lec_5.html">Lectura 5</a></li>
-        </ul>
-      </li>
-      <li>Multimedia
-      <ul class="sub-menu">
-        <li> <a href="../multimedia/videos.html">Videos</a> </li>
-        <li> <a href="../multimedia/imagenes.html">Imagenes</a> </li>
-      </ul>
-      </li>
-      <li> Actividades
-      <ul class="sub-menu">
-        <li><a href="../actividades/act_1.html">Actividad 1</a></li>
-        <li><a href="../actividades/act_2.html">Actividad 2</a></li>
-        <li><a href="../actividades/act_3.html">Actividad 3</a></li>
-      </ul>
-    </li>
-      <li> <a href="../autores.html">Autores</a></li>
-    </ul>
 
-  </nav>
 
-</header>
+      </div>
+      <div class="aside-texto">
 
-Lectura 2
-<footer>
+        <a class="twitter-timeline" data-lang="es" data-width="300" data-height="400" data-theme="light"
+          data-link-color="#2B7BB9" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by
+          UniversidadUNAD</a>
+        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+      </div>
+    </aside>
+  </section>
+  <footer>
     <div class="container content-footer">
-        <div class="footer-text">
-                <p>Universidad Nacional Abierta y a Distancia </p>
-                <p>Escuela de Ciencias Básicas Tecnología e Ingenieria</p>
-                <p>Grupo-78</p>
-            </div>
-    <div class="footer-img">
+      <div class="footer-text">
+        <p>Universidad Nacional Abierta y a Distancia </p>
+        <p>Escuela de Ciencias Básicas Tecnología e Ingenieria</p>
+        <p>Grupo-78</p>
+      </div>
+      <div class="footer-img">
         <img src="../assets/images/logo-white.png" alt="">
+      </div>
     </div>
-</div>
-   
-</footer>
+
+  </footer>
 </body>
 
 </html>
