--- a/autores.html
+++ b/autores.html
@@ -56,9 +56,9 @@
       </div>
       <div class="box-autor">
         <img src="../assets/images/imagen-lizeth.jpg" class="box-img" alt="esto es una imagen">
-        <h1> Yeimy Lizeth Vega Vargas</h1>
-        <p>Ingenieria en Sistemas <br> Grupo-301122_78 <br> ylvegava@unadvitual.edu.co <br>
-          <span class="icon-skype"></span><span> vegalizeth4</span> 
+        <h1> Harvey Alonso Sanchez Pinilla</h1>
+        <p>Ingenieria en Sistemas <br> Grupo-301122_78 <br> hasanchezp@unadvirtual.edu.co <br>
+          <span class="icon-skype"></span><span> Alonsosanchez20</span> 
           <br> </p>
       </div>
       <div class="box-autor">
