--- a/autores.html
+++ b/autores.html
@@ -55,7 +55,7 @@
           <br> </p>
       </div>
       <div class="box-autor">
-        <img src="../assets/images/imagen-lizeth.jpg" class="box-img" alt="esto es una imagen">
+        <img src="./assets/images/imagen-harvey.jpg" class="box-img" alt="esto es una imagen">
         <h1> Harvey Alonso Sanchez Pinilla</h1>
         <p>Ingenieria en Sistemas <br> Grupo-301122_78 <br> hasanchezp@unadvirtual.edu.co <br>
           <span class="icon-skype"></span><span> Alonsosanchez20</span> 
