Modificacion pagina autores

--- a/autores.html
+++ b/autores.html
@@ -49,7 +49,7 @@
     <div class="autor-content">
       <div class="box-autor">
         <img src="../assets/images/imagen-lizeth.jpg" class="box-img" alt="esto es una imagen">
-        <h1> Yeimy Lizeth Vega Vargas</h1>
+        <h1> Yeimy Lizeth Vega <br> Vargas</h1>
         <p>Ingenieria en Sistemas <br> Grupo-301122_78 <br> ylvegava@unadvitual.edu.co <br>
           <span class="icon-skype"></span><span> vegalizeth4</span> 
           <br> </p>
