--- a/multimedia/videos.html
+++ b/multimedia/videos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,59 +8,88 @@
   <title>D_S_W</title>
   <link rel="stylesheet" type="text/css" href="../assets/styles/main.css">
 </head>
-<body>
-<header>
-  
-  <nav class="container row vertical-align">
-    <div class="logo">
-      <a href="../index.html"><img src="../assets/images/Logo_unad.png" alt=""> </a>
-    </div>
-    <ul class="row menu">
 
-      <li> <a href="../index.html">Inicio</a> </li>
-      <li>Lecturas
-        <ul class="sub-menu">
+<body>
+  <header>
+
+    <nav class="container row vertical-align">
+      <div class="logo">
+        <a href="../index.html"><img src="../assets/images/Logo_unad.png" alt=""> </a>
+      </div>
+      <ul class="row menu">
+
+        <li> <a href="../index.html">Inicio</a> </li>
+        <li>Lecturas
+          <ul class="sub-menu">
             <li><a href="../lecturas/lec_1_intro_html.html"> Introducción html </a> </li>
             <li><a href="../lecturas/lec_2.html">Navegación interna y externa</a> </li>
             <li><a href="../lecturas/lec_3.html">Contenido de Html</a></li>
             <li><a href="../lecturas/lec_4.html">CSS3</a></li>
             <li><a href="../lecturas/lec_5.html">Propiedade de CSS3</a></li>
-        </ul>
-      </li>
-      <li>Multimedia
-      <ul class="sub-menu">
-        <li> <a href="../multimedia/videos.html">Videos</a> </li>
-        <li> <a href="../multimedia/imagenes.html">Imagenes</a> </li>
+          </ul>
+        </li>
+        <li>Multimedia
+          <ul class="sub-menu">
+            <li> <a href="../multimedia/videos.html">Videos</a> </li>
+            <li> <a href="../multimedia/imagenes.html">Imagenes</a> </li>
+          </ul>
+        </li>
+        <li> Actividades
+          <ul class="sub-menu">
+            <li><a href="../actividades/act_1.html">Actividad 1</a></li>
+            <li><a href="../actividades/act_2.html">Actividad 2</a></li>
+            <li><a href="../actividades/act_3.html">Actividad 3</a></li>
+          </ul>
+        </li>
+        <li> <a href="../autores.html">Autores</a></li>
       </ul>
-      </li>
-      <li> Actividades
-      <ul class="sub-menu">
-        <li><a href="../actividades/act_1.html">Actividad 1</a></li>
-        <li><a href="../actividades/act_2.html">Actividad 2</a></li>
-        <li><a href="../actividades/act_3.html">Actividad 3</a></li>
-      </ul>
-    </li>
-      <li> <a href="../autores.html">Autores</a></li>
-    </ul>
 
-  </nav>
+    </nav>
 
-</header>
-
-Videos
-<footer>
-    <div class="container content-footer">
-        <div class="footer-text">
-                <p>Universidad Nacional Abierta y a Distancia </p>
-                <p>Escuela de Ciencias Básicas Tecnología e Ingenieria</p>
-                <p>Grupo-78</p>
-            </div>
-    <div class="footer-img">
-        <img src="../assets/images/logo-white.png" alt="">
+  </header>
+  <section class="section-content container">
+    <div class="video-content">
+      <div class="box-video">
+        <h1> Curso de git </h1>
+        <iframe width="100%" height="315" src="https://www.youtube.com/embed/HiXLkL42tMU" frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <div class="box-video">
+        <h1> Curso de git </h1>
+        <iframe width="100%" height="315" src="https://www.youtube.com/embed/HiXLkL42tMU" frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <div class="box-video">
+        <h1> Curso de git </h1>
+        <iframe width="100%" height="315" src="https://www.youtube.com/embed/HiXLkL42tMU" frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <div class="box-video">
+        <h1> Curso de git </h1>
+        <iframe width="100%" height="315" src="https://www.youtube.com/embed/HiXLkL42tMU" frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+      <div class="box-video">
+        <h1> Curso de git </h1>
+        <iframe width="100%" height="315" src="https://www.youtube.com/embed/HiXLkL42tMU" frameborder="0"
+          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
     </div>
-</div>
-   
-</footer>
+  </section>
+  Videos
+  <footer>
+    <div class="container content-footer">
+      <div class="footer-text">
+        <p>Universidad Nacional Abierta y a Distancia </p>
+        <p>Escuela de Ciencias Básicas Tecnología e Ingenieria</p>
+        <p>Grupo-78</p>
+      </div>
+      <div class="footer-img">
+        <img src="../assets/images/logo-white.png" alt="">
+      </div>
+    </div>
+
+  </footer>
 </body>
 
 </html>
