--- a/actividades/act_1.html
+++ b/actividades/act_1.html
@@ -54,9 +54,8 @@
     </div>
     <div class="video-content">
       <div class="box-video">
-        <h1> Curso de git </h1>
-        <iframe width="100%" height="315" src="https://www.youtube.com/embed/HiXLkL42tMU" frameborder="0"
-          allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <h1> Test </h1>
+        <iframe width="450" height="300" frameborder="0" src="https://es.educaplay.com/recursos-educativos/4918584-test.html"></iframe>
       </div>
       <aside>
         <div class="aside-twiter">
