--- a/multimedia/imagenes.html
+++ b/multimedia/imagenes.html
@@ -51,7 +51,7 @@
     <div class="box-autor">
       <h1>estructura de html</h1>
 
-      <img width="100%" height="315" class=".box-img-multimedia" src="../assets/images/estilo_externo.png">     
+      <img width="100%" height="315" class=".box-img" src="../assets/images/estilo_externo.png">     
         <br> 
     </div>
     <div class="box-autor">
@@ -81,7 +81,7 @@
  </div>
 </section>   
 
-imagenes
+
 <footer>
     <div class="container content-footer">
         <div class="footer-text">
