--- a/multimedia/videos.html
+++ b/multimedia/videos.html
@@ -56,6 +56,8 @@
       </div>
       <div class="box-video">
         <h1> Curso de git </h1>
+        
+
         <iframe width="100%" height="315" src="https://www.youtube.com/embed/HiXLkL42tMU" frameborder="0"
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
@@ -75,8 +77,27 @@
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
+    
+    <aside>
+        <div class="aside-twiter">
+          <br>
+          <p> Bienvenido a mi pagina eres el visitante numero:<br>
+            <a href="https://www.contadorvisitasgratis.com" title="contador de visitas gratis"><img
+                src="https://counter10.wheredoyoucomefrom.ovh/private/contadorvisitasgratis.php?c=6zc5rjtbf4jnm6grnu3q8x6mmlcz157l"
+                border="0" title="contador de visitas gratis" alt="contador de visitas gratis"></a>
+          </p>
+        </div>
+        <div class="aside-texto">
+  
+          <a class="twitter-timeline" data-lang="es" data-width="300" data-height="300" data-theme="light"
+            data-link-color="#2B7BB9" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by
+            UniversidadUNAD</a>
+          <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+  
+        </div>
+      </aside>
   </section>
-  Videos
+ 
   <footer>
     <div class="container content-footer">
       <div class="footer-text">
