--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <p> Bienvenido a mi pagina eres el visitante numero:<br>
           <a href="https://www.contadorvisitasgratis.com" title="contador de visitas gratis"><img
               src="https://counter10.wheredoyoucomefrom.ovh/private/contadorvisitasgratis.php?c=6zc5rjtbf4jnm6grnu3q8x6mmlcz157l"
-              border="0" title="contador de visitas gratis" alt="contador de visitas gratis"></a>
+              borde="0" title="contador de visitas gratis" alt="contador de visitas gratis"></a>
         </p>
       </div>
       <div class="aside-texto">
