--- a/actividades/act_1.html
+++ b/actividades/act_1.html
@@ -48,16 +48,16 @@
 
   </header>
 
-<section class="section-content container">
-  <div class="video-content">
-    <div class="box-video">
+  <section class="section-content container">
+      <div class="activity-content">
+          <div class="box-video">
       <h1> Sopa de Letras </h1>
-      <iframe width="470" height="470" frameborder="0" src="https://es.educaplay.com/es/recursoseducativos/4917226/html5/sopa_de_letras.htm"></iframe>
+      <iframe width="100" height="400" frameborder="0" src="https://es.educaplay.com/es/recursoseducativos/4917226/html5/sopa_de_letras.htm"></iframe>
     </div>
     <div class="video-content">
       <div class="box-video">
         <h1> Test </h1>
-        <iframe width="470" height="470" frameborder="0" src="https://es.educaplay.com/recursos-educativos/4918584-test.html"></iframe>
+        <iframe width="100" height="400" frameborder="0" src="https://es.educaplay.com/recursos-educativos/4918584-test.html"></iframe>
       </div>
       <aside>
           <div class="aside-twiter">
