Aporte en lectura introducción a htm

--- a/lecturas/lec_1_intro_html.html
+++ b/lecturas/lec_1_intro_html.html
@@ -85,7 +85,13 @@
           </b> Representa el contenido principal de un documento HTML. Solo hay un elemento < body> en un
             documento.
         </li>
-      </ul>
+
+       <li> <b>
+          < code> 
+        </b> Está definido como elemento de frase, representa a un fragmento de código de computadora, que puede ser cualquier texto legible. 
+        </li> 
+     </ul> 
+
       <b>Referencias Bibligraficas de HTML</b>
       <p>
           
