Ajustes en el inicio

--- a/lecturas/lec_1_intro_html.html
+++ b/lecturas/lec_1_intro_html.html
@@ -25,7 +25,7 @@
             <li><a href="../lecturas/lec_2.html">Navegación interna y externa</a> </li>
             <li><a href="../lecturas/lec_3.html">Contenido de Html</a></li>
             <li><a href="../lecturas/lec_4.html">CSS3</a></li>
-            <li><a href="../lecturas/lec_5.html">Propiedade de CSS3</a></li>
+            <li><a href="../lecturas/lec_5.html">Propiedades de CSS3</a></li>
           </ul>
         </li>
         <li>Multimedia
