--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
             <li><a href="../lecturas/lec_2.html">Navegación interna y externa</a> </li>
             <li><a href="../lecturas/lec_3.html">Contenido de Html</a></li>
             <li><a href="../lecturas/lec_4.html">CSS3</a></li>
-            <li><a href="../lecturas/lec_5.html">Propiedade de CSS3</a></li>
+            <li><a href="../lecturas/lec_5.html">Propiedades de CSS3</a></li>
           </ul>
         </li>
         <li>Multimedia
           <ul class="sub-menu">
             <li> <a href="./multimedia/videos.html">Videos</a> </li>
-            <li> <a href="./multimedia/imagenes.html">Imagenes</a> </li>
+            <li> <a href="./multimedia/imagenes.html">Imágenes</a> </li>
           </ul>
         </li>
         <li> Actividades
