--- a/actividades/act_2.html
+++ b/actividades/act_2.html
@@ -54,7 +54,7 @@
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="box-video">
-            <h1> Relacione las columnas </h1>
+            <h1> Relacioné las columnas </h1>
             <iframe width="100%" height="400" src="https://es.educaplay.com/recursos-educativos/4916691-relacione_las_columnas.html" frameborder="0"
               allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
