Ingreso actividad faltante

--- a/actividades/act_3.html
+++ b/actividades/act_3.html
@@ -54,8 +54,8 @@
             allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
         <div class="box-video">
-            <h1> Pronto estará disponible </h1>
-            <iframe width="100%" height="400" src="http://www.fil.una.py/home/images/Sitio-web-en-construccion.png" frameborder="0"
+            <h1> Completar la siguiente lectura </h1>
+            <iframe width="100%" height="400" src="https://es.educaplay.com/recursos-educativos/4921270-completar.html" frameborder="0"
               allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
     </div>
