--- a/multimedia/imagenes.html
+++ b/multimedia/imagenes.html
@@ -49,7 +49,7 @@
 <section class="section-content container">
   <div class="autor-content">
     <div class="box-autor">
-      <h1>estructura de html</h1>
+      <h1>Estructura de html</h1>
 
       <img width="100%" height="315" class=".box-img" src="../assets/images/estilo_externo.png">     
         <br> 
@@ -67,7 +67,7 @@
             <br> 
         </div> 
         <div class="box-autor">
-            <h1>Contenido html</h1>
+            <h1>Contenido HTML</h1>
       
             <img width="100%" height="315" class=".box-img-multimedia" src="../assets/images/Section.png">     
               <br> 
