--- a/lecturas/lec_2.html
+++ b/lecturas/lec_2.html
@@ -50,7 +50,7 @@
 
   <section class="section-content container">    
       <div class="description">
-        <h1> Navegación externa e interna <br> (NAV -UL - OL - LI)</h1>
+        <h1> Navegación interna y externa <br> (NAV -UL - OL - LI)</h1>
           <p> Para estos enlaces de navegación se usa la etiqueta <b>
           < a>
             < /a> </b> con un atributo <b> href= "..."
@@ -79,8 +79,8 @@
           </li> <br>
           <li>
           <b> Lista Desordenada </b><br>
-          UL: esta la primera etiqueta con la que se debe abrir una lista y crear la lista desordenada <br>
-          LI: esta etiqueta marca a las listas con viñetas, círculos negros,cuadrados de forma
+          UL: Esta la primera etiqueta con la que se debe abrir una lista y crear la lista desordenada <br>
+          LI: Esta etiqueta marca a las listas con viñetas, círculos negros, cuadrados de forma
           predeterminada
           </li> <br>
 
