--- a/multimedia/videos.html
+++ b/multimedia/videos.html
@@ -50,30 +50,28 @@
   <section class="section-content container">
     <div class="video-content">
       <div class="box-video">
-        <h1> Curso de git </h1>
-        <iframe width="100%" height="315" src="https://www.youtube.com/embed/HiXLkL42tMU" frameborder="0"
+        <h1> ¿Qué es HTML y cómo funciona? </h1>
+        <iframe width="100%" height="315" src="https://www.youtube.com/embed/av_PL4_jz1I" frameborder="0"
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div class="box-video">
-        <h1> Curso de git </h1>
-        
-
-        <iframe width="100%" height="315" src="https://www.youtube.com/embed/HiXLkL42tMU" frameborder="0"
+        <h1> ¿Qué es CSS3? </h1>
+         <iframe width="100%" height="315" src="https://www.youtube.com/embed/mOQWl150sPM" frameborder="0"
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div class="box-video">
-        <h1> Curso de git </h1>
-        <iframe width="100%" height="315" src="https://www.youtube.com/embed/HiXLkL42tMU" frameborder="0"
+        <h1> Etiquetas HTML </h1>
+        <iframe width="100%" height="315" src="https://www.youtube.com/embed/uAdWv6QjnJA" frameborder="0"
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div class="box-video">
-        <h1> Curso de git </h1>
-        <iframe width="100%" height="315" src="https://www.youtube.com/embed/HiXLkL42tMU" frameborder="0"
+        <h1> Estructura de HTML </h1>
+        <iframe width="100%" height="315" src="https://www.youtube.com/embed/cE1QiCHBFfQ" frameborder="0"
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div class="box-video">
-        <h1> Curso de git </h1>
-        <iframe width="100%" height="315" src="https://www.youtube.com/embed/HiXLkL42tMU" frameborder="0"
+        <h1> Tipos de listas en HTML </h1>
+        <iframe width="100%" height="315" src="https://www.youtube.com/embed/TpkGl8PGXR4" frameborder="0"
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
