complemento texto footer

--- a/lecturas/lec_4.html
+++ b/lecturas/lec_4.html
@@ -118,9 +118,13 @@
   <footer>
     <div class="container content-footer">
       <div class="footer-text">
-        <p>Universidad Nacional Abierta y a Distancia </p>
-        <p>Escuela de Ciencias Básicas Tecnología e Ingenieria</p>
-        <p>Grupo-78</p>
+          <p>Sede nacional José Celestino Mutis: Calle 14 sur No. 14 - 23<br>
+            PBX:<a style="color:#FFF;" href="tel:+5713443700"> ( +57 1 ) 344 3700</a> Bogotá D.C., Colombia<br>
+            Línea nacional gratuita desde Colombia: <a style="color:#FFF;" href="tel:018000115223">018000115223</a><br>
+            Atención al usuario: atencionalusuario@unad.edu.co<br>
+            <p>Escuela de Ciencias Básicas Tecnología e Ingenieria</p>
+              <p>Grupo-78</p>
+            </p>
       </div>
       <div class="footer-img">
         <img src="../assets/images/logo-white.png" alt="">
