--- a/actividades/act_2.html
+++ b/actividades/act_2.html
@@ -79,7 +79,24 @@
     </div>
   </aside>
 </section>
-  </footer>
+<footer>
+    <div class="container content-footer">
+        <div class="footer-text">
+            <p>Sede nacional José Celestino Mutis: Calle 14 sur No. 14 - 23<br>
+              PBX:<a style="color:#FFF;" href="tel:+5713443700"> ( +57 1 ) 344 3700</a> Bogotá D.C., Colombia<br>
+              Línea nacional gratuita desde Colombia: <a style="color:#FFF;" href="tel:018000115223">018000115223</a><br>
+              Atención al usuario: atencionalusuario@unad.edu.co<br>
+              <p>Escuela de Ciencias Básicas Tecnología e Ingenieria</p>
+                <p>Grupo-78</p>
+              </p>
+                
+            </div>
+    <div class="footer-img">
+        <img src="../assets/images/logo-white.png" alt="">
+    </div>
+</div>
+</footer>
+  
   </body>
 
 </html>
