Fix error links

--- a/autores.html
+++ b/autores.html
@@ -8,7 +8,10 @@
   <title>D_S_W</title>
   <link rel="shortcut icon" href="./assets/images/titulo.ico">
   <link rel="stylesheet" type="text/css" href="./assets/styles/main.css">
-  <link rel="stylesheet" type="text/css" href="./assets/styles/icomoon/style.css" </head> <body>
+  <link rel="stylesheet" type="text/css" href="./assets/styles/icomoon/style.css">
+</head>
+
+<body>
   <header>
 
     <nav class="container row vertical-align">
@@ -20,11 +23,11 @@
         <li> <a href="./index.html">Inicio</a> </li>
         <li>Lecturas
           <ul class="sub-menu">
-            <li><a href="../lecturas/lec_1_intro_html.html"> Introducción html </a> </li>
-            <li><a href="../lecturas/lec_2.html">Navegación interna y externa</a> </li>
-            <li><a href="../lecturas/lec_3.html">Contenido de Html</a></li>
-            <li><a href="../lecturas/lec_4.html">CSS3</a></li>
-            <li><a href="../lecturas/lec_5.html">Propiedade de CSS3</a></li>
+            <li><a href="./lecturas/lec_1_intro_html.html"> Introducción html </a> </li>
+            <li><a href="./lecturas/lec_2.html">Navegación interna y externa</a> </li>
+            <li><a href="./lecturas/lec_3.html">Contenido de Html</a></li>
+            <li><a href="./lecturas/lec_4.html">CSS3</a></li>
+            <li><a href="./lecturas/lec_5.html">Propiedade de CSS3</a></li>
           </ul>
         </li>
         <li>Multimedia
@@ -52,21 +55,21 @@
         <img src="../assets/images/imagen-lizeth.jpg" class="box-img" alt="esto es una imagen">
         <h1> Yeimy Lizeth Vega <br> Vargas</h1>
         <p>Ingenieria en Sistemas <br> Grupo-301122_78 <br> ylvegava@unadvitual.edu.co <br>
-          <span class="icon-skype"></span><span> vegalizeth4</span> 
+          <span class="icon-skype"></span><span> vegalizeth4</span>
           <br> </p>
       </div>
       <div class="box-autor">
         <img src="./assets/images/imagen-harvey.jpg" class="box-img" alt="esto es una imagen">
         <h1> Harvey Alonso Sanchez <br> Pinilla</h1>
         <p>Ingenieria en Sistemas <br> Grupo-301122_78 <br> hasanchezp@unadvirtual.edu.co <br>
-          <span class="icon-skype"></span><span> Alonsosanchez20</span> 
+          <span class="icon-skype"></span><span> Alonsosanchez20</span>
           <br> </p>
       </div>
       <div class="box-autor">
-          <img src="./assets/images/imagen-camilo.jpg" class="box-img" alt="esto es una imagen">
+        <img src="./assets/images/imagen-camilo.jpg" class="box-img" alt="esto es una imagen">
         <h1> Camilo Andrés Paipilla Sánchez</h1>
         <p>Ingenieria en Sistemas <br> Grupo-301122_78 <br> capaipillas@unadvirtual.edu.co <br>
-          <span class="icon-skype"></span><span> camilopaipilla12</span> 
+          <span class="icon-skype"></span><span> camilopaipilla12</span>
           <br> </p>
       </div>
     </div>
@@ -93,13 +96,13 @@
   <footer>
     <div class="container content-footer">
       <div class="footer-text">
-          <p>Sede nacional José Celestino Mutis: Calle 14 sur No. 14 - 23<br>
-            PBX:<a style="color:#FFF;" href="tel:+5713443700"> ( +57 1 ) 344 3700</a> Bogotá D.C., Colombia<br>
-            Línea nacional gratuita desde Colombia: <a style="color:#FFF;" href="tel:018000115223">018000115223</a><br>
-            Atención al usuario: atencionalusuario@unad.edu.co<br>
-            <p>Escuela de Ciencias Básicas Tecnología e Ingenieria</p>
-              <p>Grupo-78</p>
-            </p>
+        <p>Sede nacional José Celestino Mutis: Calle 14 sur No. 14 - 23<br>
+          PBX:<a style="color:#FFF;" href="tel:+5713443700"> ( +57 1 ) 344 3700</a> Bogotá D.C., Colombia<br>
+          Línea nacional gratuita desde Colombia: <a style="color:#FFF;" href="tel:018000115223">018000115223</a><br>
+          Atención al usuario: atencionalusuario@unad.edu.co<br>
+          <p>Escuela de Ciencias Básicas Tecnología e Ingenieria</p>
+          <p>Grupo-78</p>
+        </p>
       </div>
       <div class="footer-img">
         <img src="./assets/images/logo-white.png" alt="">
@@ -107,6 +110,6 @@
     </div>
 
   </footer>
-  </body>
+</body>
 
 </html>
