Identación página lectura 1

--- a/lecturas/lec_1_intro_html.html
+++ b/lecturas/lec_1_intro_html.html
@@ -9,16 +9,13 @@
   <link rel="shortcut icon" href="../assets/images/titulo.ico">
   <link rel="stylesheet" type="text/css" href="../assets/styles/main.css">
 </head>
-
 <body>
   <header>
-
     <nav class="container row vertical-align">
       <div class="logo">
         <a href="../index.html"><img src="../assets/images/Logo_unad.png" alt=""> </a>
       </div>
       <ul class="row menu">
-
         <li> <a href="../index.html">Inicio</a> </li>
         <li>Lecturas
           <ul class="sub-menu">
@@ -44,11 +41,8 @@
         </li>
         <li> <a href="../autores.html">Autores</a></li>
       </ul>
-
     </nav>
-
   </header>
-
   <section class="section-content container">
     <div class="description">
       <h1> Introducción a html </h1>
@@ -94,17 +88,13 @@
      </ul> 
 
       <b>Referencias Bibligraficas de HTML</b>
-      <p>
-          
-          oshduck.todas las etiquetas.Recuperdado de: <br>
+      <p>oshduck.todas las etiquetas.Recuperdado de: <br>
           <a href=" https://allthetags.com/?fbclid=IwAR0D_8SM7L8PTki3NDjfjGidtl7T_OwU1QiZbiFLxXt83nXYtr9VpIOGgHA">
             https://allthetags.com/?fbclid=IwAR0D_8SM7L8PTki3NDjfjGidtl7T_OwU1QiZbiFLxXt83nXYtr9VpIOGgHA</a>
           <br>
           w3c.introduccion HTML. Recuperado de <br>
           <a href="https://www.w3schools.com/html/html_intro.asp">https://www.w3schools.com/html/html_intro.asp</a>
           <br>
-          
-  
           <br>
         </p>
     </div>
@@ -143,7 +133,6 @@
         <img src="../assets/images/logo-white.png" alt="">
       </div>
     </div>
-
   </footer>
 </body>
 
