Corrección página autores

--- a/autores.html
+++ b/autores.html
@@ -74,7 +74,7 @@
       </div>
        <div class="box-autor">
         <img src="./assets/images/imagen-diego.jpg" class="box-img" alt="esto es una imagen">
-        <h1> Diego Fernando Becerra<br> Vargas</h1>
+        <h1> Diego Fernando<br> Becerra Vargas</h1>
         <p>Ingenieria en Sistemas <br> Grupo-301122_78 <br> dfbecerrav@unadvirtual.edu.co <br>
           <span class="icon-skype"></span><span> diego.becerrav.16059</span>
           <br> </p>
