--- a/multimedia/videos.html
+++ b/multimedia/videos.html
@@ -57,7 +57,7 @@
       </div>
       <div class="box-video">
         <h1>¿Qué es CSS3?</h1>
-         <iframe width="100%" height="315" src="https://www.youtube.com/embed/mOQWl150sPM" frameborder="0"
+        <iframe width="100%" height="315" src="https://www.youtube.com/embed/mOQWl150sPM" frameborder="0"
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
       <div class="box-video">
@@ -75,38 +75,67 @@
         <iframe width="100%" height="315" src="https://www.youtube.com/embed/TpkGl8PGXR4" frameborder="0"
           allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
+      
+    <p>
+        <b>Referencias Bibligraficas de HTML</b>
+      <br>
+      platzi.(2014). Que es html y como funciona. Recuperado de:
+      <br>
+      <a href=" https://www.youtube.com/watch?v=av_PL4_jz1I">
+        https://www.youtube.com/watch?v=av_PL4_jz1I</a>
+      <br>
+      OpenWebinars.(2019). Que es css3. Recuperado de: <br>
+      <a href="https://www.youtube.com/watch?v=mOQWl150sPM">
+        https://www.youtube.com/watch?v=mOQWl150sPM</a>
+      <br>
+      Enrique.E.(s.a).Descripción de las etiquetas de HTML. Recuperado de: <br>
+      <a href="https://www.youtube.com/watch?v=uAdWv6QjnJA">
+        https://www.youtube.com/watch?v=uAdWv6QjnJA</a>
+      <br>
+      xBasi.(2013). Tutorial HTML #1. Estructura de HTML. Recuperado de: <br>
+      <a href="https://www.youtube.com/watch?v=cE1QiCHBFfQ">
+        https://www.youtube.com/watch?v=cE1QiCHBFfQ</a>
+      <br>
+      Perálvarez.D.(2015). Tipos de listas en HTML y direcciones físicas.Recuperado de: <br>
+      <a href="  https://www.youtube.com/watch?v=TpkGl8PGXR4">
+        https://www.youtube.com/watch?v=TpkGl8PGXR4
+      </a>
+      <br>
+      <br>
+    </p>
     </div>
     
+
     <aside>
-        <div class="aside-twiter">
-          <br>
-          <p> Bienvenido a mi pagina eres el visitante numero:<br>
-            <a href="https://www.contadorvisitasgratis.com" title="contador de visitas gratis"><img
-                src="https://counter10.wheredoyoucomefrom.ovh/private/contadorvisitasgratis.php?c=6zc5rjtbf4jnm6grnu3q8x6mmlcz157l"
-                border="0" title="contador de visitas gratis" alt="contador de visitas gratis"></a>
-          </p>
-        </div>
-        <div class="aside-texto">
-  
-          <a class="twitter-timeline" data-lang="es" data-width="300" data-height="300" data-theme="light"
-            data-link-color="#2B7BB9" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by
-            UniversidadUNAD</a>
-          <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-  
-        </div>
-      </aside>
+      <div class="aside-twiter">
+        <br>
+        <p> Bienvenido a mi pagina eres el visitante numero:<br>
+          <a href="https://www.contadorvisitasgratis.com" title="contador de visitas gratis"><img
+              src="https://counter10.wheredoyoucomefrom.ovh/private/contadorvisitasgratis.php?c=6zc5rjtbf4jnm6grnu3q8x6mmlcz157l"
+              border="0" title="contador de visitas gratis" alt="contador de visitas gratis"></a>
+        </p>
+      </div>
+      <div class="aside-texto">
+
+        <a class="twitter-timeline" data-lang="es" data-width="300" data-height="300" data-theme="light"
+          data-link-color="#2B7BB9" href="https://twitter.com/UniversidadUNAD?ref_src=twsrc%5Etfw">Tweets by
+          UniversidadUNAD</a>
+        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+      </div>
+    </aside>
   </section>
- 
+
   <footer>
     <div class="container content-footer">
       <div class="footer-text">
-          <p>Sede nacional José Celestino Mutis: Calle 14 sur No. 14 - 23<br>
-            PBX:<a style="color:#FFF;" href="tel:+5713443700"> ( +57 1 ) 344 3700</a> Bogotá D.C., Colombia<br>
-            Línea nacional gratuita desde Colombia: <a style="color:#FFF;" href="tel:018000115223">018000115223</a><br>
-            Atención al usuario: atencionalusuario@unad.edu.co<br>
-            <p>Escuela de Ciencias Básicas Tecnología e Ingenieria</p>
-              <p>Grupo-78</p>
-            </p>
+        <p>Sede nacional José Celestino Mutis: Calle 14 sur No. 14 - 23<br>
+          PBX:<a style="color:#FFF;" href="tel:+5713443700"> ( +57 1 ) 344 3700</a> Bogotá D.C., Colombia<br>
+          Línea nacional gratuita desde Colombia: <a style="color:#FFF;" href="tel:018000115223">018000115223</a><br>
+          Atención al usuario: atencionalusuario@unad.edu.co<br>
+          <p>Escuela de Ciencias Básicas Tecnología e Ingenieria</p>
+          <p>Grupo-78</p>
+        </p>
       </div>
       <div class="footer-img">
         <img src="../assets/images/logo-white.png" alt="">
