--- a/multimedia/videos.html
+++ b/multimedia/videos.html
@@ -77,7 +77,7 @@
       </div>
       
     <p>
-        <b>Referencias Bibligraficas de HTML</b>
+        <b>Referencias Bibligraficas </b>
       <br>
       platzi.(2014). Que es html y como funciona. Recuperado de:
       <br>
